<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/movie_cover_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_image_not_found"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:gravity="center"
            android:text="Imagem não encontrada!"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_backdrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <ImageButton
            android:id="@+id/ib_come_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margim_med"
            android:background="@drawable/ic_keyboard_backspace_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/title_come_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_poster_card"
            android:layout_width="128dp"
            android:layout_height="172dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backdrop_guideline">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="imagePoster"
                android:contentDescription="@string/movie_poster_picture" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/backdrop_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_guideline" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#757575"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/movie_poster_title_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_rating,movie_release_date"
            tools:layout_editor_absoluteY="403dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_title_barrier" />

        <RatingBar
            android:id="@+id/movie_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="@+id/movie_poster_card"
            app:layout_constraintStart_toStartOf="@+id/movie_poster_card"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>